Fix the auth header align

--- a/src/components/routes/login/login.scss
+++ b/src/components/routes/login/login.scss
@@ -42,6 +42,7 @@
     padding: 0;
     margin: 0;
     margin-bottom: 9px;
+    text-align: center;
 
     &_icon {
       display: inline-block;
